# fudiff

./: Cargo.toml  README.md  SPEC.md
src/: lib.rs  tests.rs
